--- a/src/app/user-add/user-add.component.html
+++ b/src/app/user-add/user-add.component.html
@@ -7,27 +7,27 @@
       <div class="card-body">
         <div class="form-group">
           <label for="">Nombres</label>
-          <input type="text" name="nombres" ngModel="nombres" class="form-control">
+          <input type="text" name="nombres" [(ngModel)]="data.nombres" class="form-control">
         </div>
         <div class="form-group">
           <label for="">Apellidos</label>
-          <input type="text" name="apellidos" ngModel="apellidos" class="form-control">
+          <input type="text" name="apellidos" [(ngModel)]="data.apellidos" class="form-control">
         </div>
         <div class="form-group">
           <label for="">Cedula</label>
-          <input type="number" min="999999" max="99999999" name="apellidos" ngModel="apellidos" class="form-control" maxlength="8">
+          <input type="number" min="999999" max="99999999" name="apellidos" [(ngModel)]="data.cedula" class="form-control" maxlength="8">
         </div>
         <div class="form-group">
           <label for="">Email</label>
-          <input type="email" name="email" ngModel="email" class="form-control">
+          <input type="email" name="email" [(ngModel)]="data.email" class="form-control">
         </div>
         <div class="form-group">
           <label for="">Telefono</label>
-          <input type="text" name="telefono" ngModel="telefono" class="form-control">
+          <input type="text" name="telefono" [(ngModel)]="data.telefono" class="form-control">
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary btn-block">Guardar</button>
+        <button class="btn btn-primary btn-block" (click)="add()">Guardar</button>
       </div>
     </div>
   </div>
