--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<div>
+    <ul>
+        <li><a [routerLink]="['/home']">Inicio</a></li>
+        <li><a [routerLink]="['/users/add']">Nuevo Usuario</a></li>
+        <li><a [routerLink]="['/users/list']">Listado de Usuarios</a></li>
+    </ul>
+</div>
+<hr>
 <router-outlet></router-outlet>
