--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -1,29 +1,33 @@
 <div class="row">
-  <div class="col-md-5 offset-3">
+  <div class="col-md-8 offset-2">
     <div class="card">
       <div class="card-header">
-        <h4 class="card-title">Nuevo Usuario</h4>
+        <h4 class="card-title">Editar Usuario ID: <strong>{{ user.id }}</strong></h4>
       </div>
       <div class="card-body">
-        <div class="form-group">
-          <label for="">Nombres</label>
-          <input type="text" name="nombres" [(ngModel)]="user.nombres" class="form-control">
+        <div class="row">
+          <div class="col-md-4">
+            <label for="">Nombres</label>
+            <input type="text" name="nombres" [(ngModel)]="user.nombres" class="form-control">
+          </div>
+          <div class="col-md-4">
+            <label for="">Apellidos</label>
+            <input type="text" name="apellidos" [(ngModel)]="user.apellidos" class="form-control">
+          </div>
+          <div class="col-md-4">
+            <label for="">Cedula</label>
+            <input type="number" min="999999" max="99999999" name="apellidos" [(ngModel)]="user.cedula" class="form-control" maxlength="8">
+          </div>
         </div>
-        <div class="form-group">
-          <label for="">Apellidos</label>
-          <input type="text" name="apellidos" [(ngModel)]="user.apellidos" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="">Cedula</label>
-          <input type="number" min="999999" max="99999999" name="apellidos" [(ngModel)]="user.cedula" class="form-control" maxlength="8">
-        </div>
-        <div class="form-group">
-          <label for="">Email</label>
-          <input type="email" name="email" [(ngModel)]="user.email" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="">Telefono</label>
-          <input type="text" name="telefono" [(ngModel)]="user.telefono" class="form-control">
+        <div class="row" style="margin-top:10px">
+          <div class="col-md-6">
+            <label for="">Email</label>
+            <input type="email" name="email" [(ngModel)]="user.email" class="form-control">
+          </div>
+          <div class="col-md-6">
+            <label for="">Telefono</label>
+            <input type="text" name="telefono" [(ngModel)]="user.telefono" class="form-control">
+          </div>
         </div>
       </div>
       <div class="card-footer">
