--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+ul {
+    margin-top: 15px;
+   list-style: none;
+}
+
+ul li {
+    display: inline-block;
+    padding-left: 20px;
+}
+
+ul li a {
+    color: black;
+}
+
+ul li a:hover {
+    color: dimgrey;
+    text-decoration: none;
+}
+
+h1,h3 {
+    text-align: center;
+}
